<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/marker_info_window"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/MarkerInfoTitleText"
            android:textStyle="bold" />

<TableLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/MarkerInfoText"
            android:text="@string/polygon_marker_info_windows_polygon_id"/>

        <TextView
            android:id="@+id/txt_polygon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/MarkerInfoText"/>                
    </TableRow> 
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/MarkerInfoText"
            android:text="@string/polygon_marker_info_windows_desc"/>

        <TextView
            android:id="@+id/txt_polygon_desc"
            android:textSize="@dimen/MarkerInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </TableRow> 
    
    
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/MarkerInfoText"
            android:text="@string/polygon_marker_info_windows_point_list"/>

        <TextView
            android:id="@+id/txt_pointlist"
            android:textSize="@dimen/MarkerInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
    </TableRow> 
        
</TableLayout>
</LinearLayout>